@@ -1,9 +1,12 @@
 package com.universidad_nur.notasnurv3_api.services;
 
 import com.universidad_nur.notasnurv3_api.dto.EvaluationPlanResponse;
+import com.universidad_nur.notasnurv3_api.entities.Components;
 import com.universidad_nur.notasnurv3_api.entities.EvaluationPlan;
+import com.universidad_nur.notasnurv3_api.entities.RecordStatus;
 import com.universidad_nur.notasnurv3_api.entities.Subject;
 import com.universidad_nur.notasnurv3_api.entities.Users;
+import com.universidad_nur.notasnurv3_api.exceptions.InvalidOperationException;
 import com.universidad_nur.notasnurv3_api.exceptions.ResourceNotFoundException;
 import com.universidad_nur.notasnurv3_api.exceptions.UnauthorizedAccessException;
 import com.universidad_nur.notasnurv3_api.repositories.EvaluationPlanRepository;
@@ -16,6 +19,9 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.dao.DataIntegrityViolationException;
 
+import java.math.BigDecimal;
+import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -123,81 +129,60 @@ class EvaluationPlanServiceTest {
 
         verify(evaluationPlanRepository, times(1)).save(any(EvaluationPlan.class));
     }
-
     @Test
-    void activatePlan_ShouldThrowException_WhenPlanIsEmpty() {
-        EvaluationPlan mockPlan = new EvaluationPlan();
-        mockPlan.setId(100);
-        mockPlan.setSubject(mockSubject);
-        mockPlan.setComponents(java.util.Collections.emptyList());
+    void activatePlan_ShouldThrowInvalidOperation_WhenPlanHasNoComponents() {
+        EvaluationPlan emptyPlan = new EvaluationPlan();
+        emptyPlan.setId(100);
+        emptyPlan.setSubject(mockSubject);
+        emptyPlan.setComponents(Collections.emptyList());
 
         when(subjectRepository.findById(1)).thenReturn(Optional.of(mockSubject));
-        when(evaluationPlanRepository.findBySubjectId(1)).thenReturn(Optional.of(mockPlan));
+        when(evaluationPlanRepository.findBySubjectId(1)).thenReturn(Optional.of(emptyPlan));
 
-        com.universidad_nur.notasnurv3_api.exceptions.InvalidOperationException exception = assertThrows(
-                com.universidad_nur.notasnurv3_api.exceptions.InvalidOperationException.class,
-                () -> evaluationPlanService.activatePlan(1, "profesor@nur.edu.bo")
-        );
+        InvalidOperationException exception = assertThrows(InvalidOperationException.class,
+                () -> evaluationPlanService.activatePlan(1, "profesor@nur.edu.bo"));
 
         assertEquals("No se puede activar un plan de evaluación sin componentes.", exception.getMessage());
+        verify(subjectRepository, never()).save(any(Subject.class));
     }
 
     @Test
-    void activatePlan_ShouldThrowException_WhenPlanHasNullComponents() {
-        EvaluationPlan mockPlan = new EvaluationPlan();
-        mockPlan.setId(100);
-        mockPlan.setSubject(mockSubject);
-        mockPlan.setComponents(null);
+    void activatePlan_ShouldThrowInvalidOperation_WhenTotalWeightIsNotOneHundred() {
+        EvaluationPlan incompletePlan = new EvaluationPlan();
+        incompletePlan.setId(100);
+        incompletePlan.setSubject(mockSubject);
+        incompletePlan.setComponents(List.of(
+                Components.builder().weight(new BigDecimal("40.00")).build(),
+                Components.builder().weight(new BigDecimal("50.00")).build()
+        ));
 
         when(subjectRepository.findById(1)).thenReturn(Optional.of(mockSubject));
-        when(evaluationPlanRepository.findBySubjectId(1)).thenReturn(Optional.of(mockPlan));
+        when(evaluationPlanRepository.findBySubjectId(1)).thenReturn(Optional.of(incompletePlan));
 
-        com.universidad_nur.notasnurv3_api.exceptions.InvalidOperationException exception = assertThrows(
-                com.universidad_nur.notasnurv3_api.exceptions.InvalidOperationException.class,
-                () -> evaluationPlanService.activatePlan(1, "profesor@nur.edu.bo")
-        );
-
-        assertEquals("No se puede activar un plan de evaluación sin componentes.", exception.getMessage());
-    }
-
-    @Test
-    void activatePlan_ShouldThrowException_WhenTotalWeightIsNot100() {
-        EvaluationPlan mockPlan = new EvaluationPlan();
-        mockPlan.setId(100);
-        mockPlan.setSubject(mockSubject);
-        
-        com.universidad_nur.notasnurv3_api.entities.Components component = com.universidad_nur.notasnurv3_api.entities.Components.builder()
-                .weight(new java.math.BigDecimal("90"))
-                .build();
-        mockPlan.setComponents(java.util.Arrays.asList(component));
-
-        when(subjectRepository.findById(1)).thenReturn(Optional.of(mockSubject));
-        when(evaluationPlanRepository.findBySubjectId(1)).thenReturn(Optional.of(mockPlan));
-
-        com.universidad_nur.notasnurv3_api.exceptions.InvalidOperationException exception = assertThrows(
-                com.universidad_nur.notasnurv3_api.exceptions.InvalidOperationException.class,
-                () -> evaluationPlanService.activatePlan(1, "profesor@nur.edu.bo")
-        );
+        InvalidOperationException exception = assertThrows(InvalidOperationException.class,
+                () -> evaluationPlanService.activatePlan(1, "profesor@nur.edu.bo"));
 
         assertEquals("La suma de las ponderaciones debe ser exactamente 100.", exception.getMessage());
+        verify(subjectRepository, never()).save(any(Subject.class));
     }
 
     @Test
-    void activatePlan_ShouldActivatePlan_WhenPlanIsValid() {
-        EvaluationPlan mockPlan = new EvaluationPlan();
-        mockPlan.setId(100);
-        mockPlan.setSubject(mockSubject);
-
-        com.universidad_nur.notasnurv3_api.entities.Components c1 = com.universidad_nur.notasnurv3_api.entities.Components.builder().weight(new java.math.BigDecimal("50")).build();
-        com.universidad_nur.notasnurv3_api.entities.Components c2 = com.universidad_nur.notasnurv3_api.entities.Components.builder().weight(new java.math.BigDecimal("50")).build();
-        mockPlan.setComponents(java.util.Arrays.asList(c1, c2));
+    void activatePlan_ShouldSetSubjectAsActive_WhenTotalWeightIsExactlyOneHundred() {
+        EvaluationPlan validPlan = new EvaluationPlan();
+        validPlan.setId(100);
+        validPlan.setSubject(mockSubject);
+        validPlan.setComponents(List.of(
+                Components.builder().weight(new BigDecimal("40.00")).build(),
+                Components.builder().weight(new BigDecimal("60.00")).build()
+        ));
 
         when(subjectRepository.findById(1)).thenReturn(Optional.of(mockSubject));
-        when(evaluationPlanRepository.findBySubjectId(1)).thenReturn(Optional.of(mockPlan));
+        when(evaluationPlanRepository.findBySubjectId(1)).thenReturn(Optional.of(validPlan));
 
         evaluationPlanService.activatePlan(1, "profesor@nur.edu.bo");
 
-        assertEquals(com.universidad_nur.notasnurv3_api.entities.RecordStatus.ACTIVE, mockSubject.getRecordStatus());
+        assertEquals(RecordStatus.ACTIVE, mockSubject.getRecordStatus());
         verify(subjectRepository, times(1)).save(mockSubject);
     }
+
 }
